# llama-cpp-capi

./: .gitignore  CMakeLists.txt  README.md  test_buffer_behavior
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
examples/: CMakeLists.txt  README.md  tokenizer_example.c
include/: llama_tokenizer.h
src/: llama_tokenizer.cpp
tests/: CMakeLists.txt  run_tests.sh  test_buffer_behavior.c  test_detokenize.c  test_edge_cases.c  test_token_counting.c
